feat: unify day task data flow and dynamic habits calendar

--- a/.ai-status.md
+++ b/.ai-status.md
@@ -1,25 +1,46 @@
 # AI Status Report - Habit Tracker
 
 ## Current Progress
-- **UI Architecture Refactored**: All visual components (Dashboard, Habits, Journal, Settings, HabitCalendar) moved to `components/ui_legacy/` to prepare for a clean-slate redesign.
-- **Routing**: Implemented file-based routing using Next.js App Router (`/dashboard`, `/habits`, `/journal`, `/settings`) with a `(main)` route group.
-- **Root Redirect**: Root URL `/` now redirects to `/dashboard`.
-- **Infrastructure Shell**: Created `components/AppLayout.tsx`, a clean, full-viewport flex container as the foundation for the new UI.
-- **Layout Expansion**: Removed `max-width` and centering constraints from `globals.css` and layouts.
-- **Verification**: All 40 unit and component tests are passing (after updating import paths for archived components).
+- **Dashboard Scope Refactor**: `/dashboard` now renders `<Dashboard />` without hardcoded `habitId`, so it aggregates all habits by default. `habitId` is optional and only scopes when explicitly provided.
+- **Habits UI Refactor**: `/habits` now uses a 3-column layout with separated components:
+  - `components/habits/CalendarPanel.tsx`
+  - `components/habits/TimelinePanel.tsx`
+  - `components/habits/StatsPanel.tsx`
+- **Dynamic Calendar**: Habits calendar is now fully dynamic:
+  - current month state
+  - selected date state (defaults to today)
+  - computed month label/days/weekday offset
+  - prev/next month navigation
+  - selected day + today highlight
+- **DayTask Wiring**: Habits page is wired to existing state bridge + adapter path:
+  - `habitStore.exportData()` snapshot
+  - `deriveDayTaskView(selectedDate, snapshot)`
+  - create/edit via `habitStore.createDayTask` / `habitStore.updateDayTask`
+- **Create Task Modal**: `+ Create Tasks` opens modal in `StatsPanel` with subtle Framer Motion animation and persists using selected date.
 
-## State of the Union
-- **Domain Purity**: Domain logic (`lib/domain/`) remains isolated and pure.
-- **State Bridge**: `habitStore.ts` serves as the single source of truth for persistence.
-- **UI State**: Removed temporary `activeView` state in favor of URL-driven routing.
-- **Archive Policy**: Legacy UI is preserved in `ui_legacy/` and remains functional/tested.
+## Data Model & State
+- **Single Source of Truth Consolidated**: DayTasks are no longer stored separately; they are mapped into `habits + entries` in `habitStore`.
+- **Adapter Compatibility Maintained**: `exportData().dayTasks` is now derived from mapped habits/entries for compatibility with `dayTaskAdapter`.
+- **Timeline Status Derivation**: Added pure helper `lib/domain/timeline.ts` to derive 30-day statuses (`Completed`, `In Progress`, `Empty`) from adapter day views.
+- **Seed Safety Fix**: `seedRealisticTestData` now refuses to overwrite existing data unless `force=true`.
+
+## Dashboard Data Flow
+- **Live Recompute Path Verified**:
+  - `habitStore` mutations dispatch `habit-store-update`
+  - `Dashboard` listens to `habit-store-update` + `storage`
+  - `Dashboard` reloads data and recomputes summary via `buildDashboardSummary(...)`
+- **No Domain Changes**: `lib/domain/dashboard.ts` and `buildDashboardSummary` unchanged.
+
+## Test Status
+- Added and passing tests for:
+  - DayTask adapter create/edit/date isolation
+  - DayTask -> dashboard metric/streak impact
+  - DayTask mutation event dispatch + summary update integration
+  - Timeline helper status derivation
+  - Dashboard aggregation when no `habitId` is provided
+- Latest targeted runs pass (25+ tests across state/domain/dashboard suites).
 
 ## Next Steps
-- **Start New UI Implementation**: Begin building the "clean" UI within the `AppLayout` shell.
-- **Navigation Redesign**: Replace the temporary tab bar with the new UI's navigation system.
-- **Theme Wiring**: Complete the connection between `settings.theme` and the CSS engine.
-- **Responsive Review**: Ensure the full-viewport layout holds up on mobile devices.
-
-## Blockers / Logic Debt
-- **Legacy Dependencies**: Route pages still depend on `ui_legacy` components until new ones are built.
-- **CSS Namespacing**: Need to ensure new UI styles don't conflict with legacy CSS tokens if they are kept.
+- Align dashboard streak expectations with selected-date workflows (if product requires historical-context streak views rather than today-based streaks).
+- Add dedicated Habits page tests for dynamic month navigation and today/selected highlighting behavior.
+- Decide whether DayTask-mapped habits should be visually separated from user-created recurring habits in dashboard cards.
