feat: add Prisma-backed habit APIs with NextAuth user scoping

--- a/.ai-status.md
+++ b/.ai-status.md
@@ -1,46 +1,55 @@
 # AI Status Report - Habit Tracker
 
-## Current Progress
-- **Dashboard Scope Refactor**: `/dashboard` now renders `<Dashboard />` without hardcoded `habitId`, so it aggregates all habits by default. `habitId` is optional and only scopes when explicitly provided.
-- **Habits UI Refactor**: `/habits` now uses a 3-column layout with separated components:
-  - `components/habits/CalendarPanel.tsx`
-  - `components/habits/TimelinePanel.tsx`
-  - `components/habits/StatsPanel.tsx`
-- **Dynamic Calendar**: Habits calendar is now fully dynamic:
-  - current month state
-  - selected date state (defaults to today)
-  - computed month label/days/weekday offset
-  - prev/next month navigation
-  - selected day + today highlight
-- **DayTask Wiring**: Habits page is wired to existing state bridge + adapter path:
-  - `habitStore.exportData()` snapshot
-  - `deriveDayTaskView(selectedDate, snapshot)`
-  - create/edit via `habitStore.createDayTask` / `habitStore.updateDayTask`
-- **Create Task Modal**: `+ Create Tasks` opens modal in `StatsPanel` with subtle Framer Motion animation and persists using selected date.
+## Completed
+- **Prisma Stabilized**
+  - Downgraded to `prisma@5` and `@prisma/client@5`.
+  - Regenerated client successfully.
+  - `prisma/schema.prisma` uses:
+    - `provider = "postgresql"`
+    - `url = env("DATABASE_URL")`
+  - Removed `accelerateUrl` usage and adapter patterns.
+  - Added shared singleton client at `lib/server/prisma.ts`.
 
-## Data Model & State
-- **Single Source of Truth Consolidated**: DayTasks are no longer stored separately; they are mapped into `habits + entries` in `habitStore`.
-- **Adapter Compatibility Maintained**: `exportData().dayTasks` is now derived from mapped habits/entries for compatibility with `dayTaskAdapter`.
-- **Timeline Status Derivation**: Added pure helper `lib/domain/timeline.ts` to derive 30-day statuses (`Completed`, `In Progress`, `Empty`) from adapter day views.
-- **Seed Safety Fix**: `seedRealisticTestData` now refuses to overwrite existing data unless `force=true`.
+- **Database URL Normalized**
+  - `.env` now uses direct TCP format (`postgresql://...`), not `prisma+postgres://`.
 
-## Dashboard Data Flow
-- **Live Recompute Path Verified**:
-  - `habitStore` mutations dispatch `habit-store-update`
-  - `Dashboard` listens to `habit-store-update` + `storage`
-  - `Dashboard` reloads data and recomputes summary via `buildDashboardSummary(...)`
-- **No Domain Changes**: `lib/domain/dashboard.ts` and `buildDashboardSummary` unchanged.
+- **API Route Handlers (App Router)**
+  - `app/api/habits/route.ts`: `GET`, `POST`, `DELETE`
+  - `app/api/entries/route.ts`: `GET`, `POST`, `DELETE`
+  - Routes return JSON and are wired through repository layer.
 
-## Test Status
-- Added and passing tests for:
-  - DayTask adapter create/edit/date isolation
-  - DayTask -> dashboard metric/streak impact
-  - DayTask mutation event dispatch + summary update integration
-  - Timeline helper status derivation
-  - Dashboard aggregation when no `habitId` is provided
-- Latest targeted runs pass (25+ tests across state/domain/dashboard suites).
+- **State Layer Refactor**
+  - `lib/state/habitStore.ts` now persists habits/entries via async `fetch` to:
+    - `/api/habits`
+    - `/api/entries`
+  - Preserved `habit-store-update` event dispatching.
+  - Kept method names/public API surface; methods that require server I/O are async.
+  - Updated callers to await async store methods where needed:
+    - `app/(main)/habits/page.tsx`
+    - `components/ui_legacy/Dashboard.tsx`
+    - plus direct legacy consumers (`Habits`, `HabitCalendar`, `Settings`).
 
-## Next Steps
-- Align dashboard streak expectations with selected-date workflows (if product requires historical-context streak views rather than today-based streaks).
-- Add dedicated Habits page tests for dynamic month navigation and today/selected highlighting behavior.
-- Decide whether DayTask-mapped habits should be visually separated from user-created recurring habits in dashboard cards.
+- **NextAuth + App Router Integration**
+  - Credentials provider enabled for development.
+  - User record is upserted on first successful login in `authorize`.
+  - JWT/session callbacks now propagate `session.user.id`.
+  - Added type augmentation: `types/next-auth.d.ts`.
+  - Protected routes:
+    - `/dashboard/:path*`
+    - `/habits/:path*`
+  - API handlers now require auth and use `session.user.id`.
+  - Repository queries/mutations are user-scoped by `userId`.
+
+## Verification Snapshot
+- Unauthenticated route protection works:
+  - `/dashboard` -> redirects to `/login?callbackUrl=%2Fdashboard`
+  - `/habits` -> redirects to `/login?callbackUrl=%2Fhabits`
+- Unauthenticated API access blocked:
+  - `/api/habits` returns `401`.
+
+## Current Blocker
+- **PostgreSQL not reachable at `localhost:5432`** in current environment.
+- Because login now creates/reads users in DB, credentials login cannot fully complete until DB is running.
+
+## Notes
+- Domain logic was not modified.
